.deploy/rest-events/accounts/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: accounts-app
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: accounts-app
  template:
    metadata:
      labels:
        app: accounts-app
    spec:
      volumes:
        - name: accounts-pv-storage
          persistentVolumeClaim:
            claimName: accounts-pv-claim
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: accounts-re-middleware
          image: ghcr.io/manuelottlik/htp-re-middleware
          imagePullPolicy: Always
          ports:
           - containerPort: 8088
          resources:
            limits:
              memory: 64Mi
              cpu: 50m
        - name: accounts-app
          image: ghcr.io/manuelottlik/htp-rest-events-accounts
          imagePullPolicy: Always
          ports:
           - containerPort: 8080
           - containerPort: 8081
          resources:
            limits:
              memory: 64Mi
              cpu: 50m
          volumeMounts:
            - name: accounts-pv-storage
              mountPath: /etc/data/db
